# Dio_CursoPythonBackEnd

./: README.md
01pacotes/: 01intro.py  02pipenv.py  03poetry.py  desafio.py  pyproject.toml
02banco_de_dados/: 01dbapi.py  02gerenciamento_transacoes.py  banco_teste.db
