[project]
name = "dio-cursopythonbackend"
version = "0.1.0"
description = ""
authors = [
    {name = "Afonso Rafael",email = "programadoafonso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
